# Python-Boilerplate-Backend

./: .gitignore  pyproject.toml  readme.md
app/: main.py  requirements.txt
app/api/v1/: __init__.py
app/api/v1/routes/: __init__.py  health.py
app/core/: config.py  logger.py
app/services/: health.py  kafka.py  mongo.py  postgres.py  redis.py
create_backend/: __init__.py  cli.py
