[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "create-backend"
version = "0.1.0"
description = "CLI to scaffold FastAPI backend"
requires-python = ">=3.9"

[project.scripts]
create-backend = "create_backend.cli:main"

[tool.setuptools.packages.find]
where = ["."]
